整理material資料夾

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,7 +54,7 @@
      <Compile Include="Assets\Pack\Water\scripts\WaterRange.cs" />
      <Compile Include="Assets\scripts\Factoryplugin\FourtyFiveDegree.cs" />
      <Compile Include="Assets\Prefab\machine\QBox\Script\QBoxDoScale.cs" />
-     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\MoveMachineWaitAtOriginal.cs" />
+     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\AnimationState\MoveMachineWaitAtOriginal.cs" />
      <Compile Include="Assets\Pack\WaterPark\WaterTrigger.cs" />
      <Compile Include="Assets\Pack\DiyTerrain\Script\DrawMeshAABB.cs" />
      <Compile Include="Assets\scripts\MoveForceMonitor\MoveForceSetting.cs" />
@@ -79,7 +79,7 @@
      <Compile Include="Assets\scripts\GravityGenerator\TorusGravityGenerator.cs" />
      <Compile Include="Assets\Pack\Test\PeekTanget\scripts\NormalMapAxis.cs" />
      <Compile Include="Assets\Prefab\EndlessCorridor\EndlessCorridorTriggerBox.cs" />
-     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\MoveMachineWaitAtTarget.cs" />
+     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\AnimationState\MoveMachineWaitAtTarget.cs" />
      <Compile Include="Assets\scripts\Controller\PlanetPlayerController.cs" />
      <Compile Include="Assets\scripts\Level\PosFollow.cs" />
      <Compile Include="Assets\scripts\Level\Door.cs" />
@@ -94,7 +94,7 @@
      <Compile Include="Assets\scripts\Level\DisalbeAirCableMotor.cs" />
      <Compile Include="Assets\scripts\Level\DominoSpwan.cs" />
      <Compile Include="Assets\scripts\GravityGenerator\PlanetGravityGenerator.cs" />
-     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\MoveMachineBack2Original.cs" />
+     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\AnimationState\MoveMachineBack2Original.cs" />
      <Compile Include="Assets\scripts\Shared\LayerDefined.cs" />
      <Compile Include="Assets\Pack\BehindTheWall\RenderBehindTheWall.cs" />
      <Compile Include="Assets\scripts\Tool\CameraPivot.cs" />
@@ -105,23 +105,23 @@
      <Compile Include="Assets\Pack\BehindTheWall\RenderBehindTheWallCamera.cs" />
      <Compile Include="Assets\scripts\help\MeasuringJumpHeight.cs" />
      <Compile Include="Assets\scripts\Level\RecordPositionDiff.cs" />
-     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\MoveMachineMove2Target.cs" />
-     <Compile Include="Assets\scripts\Level\CoroutineMove.cs" />
+     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\AnimationState\MoveMachineMove2Target.cs" />
+     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\CoroutineMove.cs" />
      <Compile Include="Assets\Prefab\EndlessCorridor\Scalable.cs" />
      <Compile Include="Assets\scripts\Input\PCInput.cs" />
      <Compile Include="Assets\scripts\Tool\SetCameraPivot.cs" />
      <Compile Include="Assets\Prefab\machine\Portal\SyncCamera.cs" />
      <Compile Include="Assets\Pack\DiyTerrain\Script\SphereTerrainPiece.cs" />
-     <Compile Include="Assets\scripts\Level\SinMove.cs" />
+     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\SinMove.cs" />
      <Compile Include="Assets\scripts\Tool\PlanetMovable.cs" />
-     <Compile Include="Assets\scripts\Level\SetParent.cs" />
+     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\SetParent.cs" />
      <Compile Include="Assets\Pack\Test\Collision\TestOnCollisionEnterPrintSelf.cs" />
      <Compile Include="Assets\scripts\Factory\CreatePlayer.cs" />
      <Compile Include="Assets\scripts\Level\Domino.cs" />
      <Compile Include="Assets\scripts\Input\JoyStickControlPanel.cs" />
      <Compile Include="Assets\Prefab\EndlessCorridor\EndlessCorridorHolder.cs" />
      <Compile Include="Assets\Pack\Test\Rotation\TestRotationAxis.cs" />
-     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\MoveMachineInitWait.cs" />
+     <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\AnimationState\MoveMachineInitWait.cs" />
      <Compile Include="Assets\scripts\Shared\SharedTool.cs" />
      <Compile Include="Assets\scripts\Tool\DrawAABB.cs" />
      <Compile Include="Assets\Pack\Test\Collision\TestOnCollisionEnterPrintCollision.cs" />
