--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -85,6 +85,7 @@
      <Compile Include="Assets\scripts\Level\Door.cs" />
      <Compile Include="Assets\scripts\Shared\TagDefined.cs" />
      <Compile Include="Assets\Pack\Test\PeekTanget\scripts\PeekGeo.cs" />
+     <Compile Include="Assets\scripts\Move\MoveForceParameter.cs" />
      <Compile Include="Assets\Pack\Test\Rotation\TestRotationEularAngle.cs" />
      <Compile Include="Assets\Prefab\machine\QBox\Script\QuestionBox.cs" />
      <Compile Include="Assets\scripts\Controller\StandingController.cs" />
@@ -108,6 +109,7 @@
      <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\AnimationState\MoveMachineMove2Target.cs" />
      <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\CoroutineMove.cs" />
      <Compile Include="Assets\Prefab\EndlessCorridor\Scalable.cs" />
+     <Compile Include="Assets\scripts\Move\InputProxy.cs" />
      <Compile Include="Assets\scripts\Input\PCInput.cs" />
      <Compile Include="Assets\scripts\Tool\SetCameraPivot.cs" />
      <Compile Include="Assets\Prefab\machine\Portal\SyncCamera.cs" />
@@ -132,8 +134,7 @@
      <Compile Include="Assets\Pack\DiyTerrain\Script\ShowMeshBound.cs" />
      <Compile Include="Assets\scripts\Input\AndroidInput.cs" />
      <Compile Include="Assets\scripts\Level\ManyBike.cs" />
-     <Compile Include="Assets\scripts\Move\InputProxy.cs" />
-     <Compile Include="Assets\scripts\Move\MoveForceParameter.cs" />
+     <Compile Include="Assets\scripts\Input\InputManager.cs" />
      <None Include="Assets\Pack\DiyTerrain\shaders\ToSphere.shader" />
      <None Include="Assets\Pack\DiyTerrain\shaders\ToSpherePBR.shader" />
      <None Include="Assets\Pack\DiyTerrain\shaders\brush\brush_fill.shader" />
