--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -107,6 +107,7 @@
      <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\AnimationState\MoveMachineMove2Target.cs" />
      <Compile Include="Assets\Prefab\machine\MovingPlatform\Script\CoroutineMove.cs" />
      <Compile Include="Assets\Prefab\EndlessCorridor\Scalable.cs" />
+     <Compile Include="Assets\scripts\Input\InputHub.cs" />
      <Compile Include="Assets\scripts\Tool\SetCameraPivot.cs" />
      <Compile Include="Assets\Prefab\machine\Portal\SyncCamera.cs" />
      <Compile Include="Assets\Pack\DiyTerrain\Script\SphereTerrainPiece.cs" />
@@ -126,7 +127,7 @@
      <Compile Include="Assets\Pack\DiyTerrain\Script\Brush.cs" />
      <Compile Include="Assets\Pack\DiyTerrain\Script\ShowMeshBound.cs" />
      <Compile Include="Assets\scripts\Level\ManyBike.cs" />
-     <Compile Include="Assets\scripts\Input\InputHub.cs" />
+     <Compile Include="Assets\scripts\Tool\AvoidStickTool.cs" />
      <None Include="Assets\Pack\DiyTerrain\shaders\ToSphere.shader" />
      <None Include="Assets\Pack\DiyTerrain\shaders\ToSpherePBR.shader" />
      <None Include="Assets\Pack\DiyTerrain\shaders\brush\brush_fill.shader" />
