--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "editor.formatOnSave": true,
-    "editor.codeLens": false
+    "editor.formatOnSave": true
 }
